# aurora

./: Cargo.toml  LICENSE-MIT
src/: ast.rs  client.rs  diagnostic.rs  lexer.rs  machine.rs  main.rs  parser.rs  span.rs  token.rs  validated.rs  validator.rs  value.rs
src/snapshots/: aurora__parser__tests__empty_entry.au@empty_entry.au.snap  aurora__parser__tests__empty_file.au@empty_file.au.snap  aurora__parser__tests__entry_with_delete_request.au@entry_with_delete_request.au.snap  aurora__parser__tests__entry_with_get_request.au@entry_with_get_request.au.snap  aurora__parser__tests__entry_with_patch_request.au@entry_with_patch_request.au.snap  aurora__parser__tests__entry_with_post_request.au@entry_with_post_request.au.snap  aurora__parser__tests__entry_with_put_request.au@entry_with_put_request.au.snap  aurora__parser__tests__multiple_empty_entries.au@multiple_empty_entries.au.snap  aurora__parser__tests__trivia.au@trivia.au.snap
src/test_data/parser/: empty_entry.au  entry_with_get_request.au  entry_with_patch_request.au  multiple_empty_entries.au  trivia.au
test_data/parser/: empty_entry.ast  entry_with_delete_request.au  entry_with_get_request.ast  entry_with_patch_request.ast  entry_with_post_request.ast  entry_with_post_request.au  entry_with_put_request.ast  string.ast  string_braces.ast  string_braces.au  string_empty.ast  string_empty.au  string_template.ast  string_template.au  string_template_adjacent.ast  string_template_between.ast  string_template_start.ast  string_template_start.au
test_data/parser/err/: const_missing_eq.ast  const_missing_eq.au  (+9 more)
(+8 files in other folders)
