[package]
name = "aurora"
version = "0.1.0"
edition = "2024"

[dependencies]
annotate-snippets = "0.12.8"
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
indexmap = "2.12.0"
reqwest = { version = "0.12.24", features = ["blocking"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }

[dev-dependencies]
expect-test = "1.5.1"
